# wasm-edge-lab

./: .gitignore  Cargo.toml  README.md  performance_report.md  run_output.txt
crates/wasicell-bench/: Cargo.toml
crates/wasicell-bench/src/: main.rs
crates/wasicell-common/: Cargo.toml
crates/wasicell-common/src/: lib.rs
crates/wasicell-host/: Cargo.toml
crates/wasicell-host/src/: main.rs  runtime.rs
examples/: app.toml
examples/data/: input.txt  output.txt
guests/file-worker/: Cargo.toml  Dockerfile
guests/file-worker/src/: main.rs
guests/text-api/: Cargo.toml
guests/text-api/src/: main.rs
