[package]
name = "wasicell-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.34", features = ["full"] }
wasmer = "7.1.0"
wasmer-wasix = { version = "0.701.0", features = ["host-vnet", "sys-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
sysinfo = "0.29"
tempfile = "3.8"
