[package]
name = "wasicell-host"
version = "0.1.0"
edition = "2021"

[dependencies]
wasicell-common = { path = "../wasicell-common" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.34", features = ["full"] }
wasmer = "7.1.0"
wasmer-wasix = "0.701.0"
